--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <h3>Bienvenido, Administrador</h3>
             <p>Aquí puedes gestionar la web.</p>
             <button onclick="logoutAdmin()">Cerrar Sesión</button>
+            
+            <!-- Consola de administración -->
+            <h4>Consola de Administración</h4>
+            <div id="admin-console" style="width: 100%; height: 200px; background-color: #333; color: white; padding: 10px; overflow-y: scroll; font-family: monospace;">
+                <p>Bienvenido, Admin. Introduce comandos para modificar la página.</p>
+            </div>
+            <input type="text" id="command-input" placeholder="Ingresa un comando..." style="width: 100%; padding: 10px; font-family: monospace; margin-top: 10px;" />
         </div>
     </section>
     
@@ -77,6 +84,32 @@
             document.getElementById("admin-panel").style.display = "none";
             document.getElementById("login-form").style.display = "block";
         }
+
+        // Función para manejar comandos
+        function handleCommand(command) {
+            if (command === "cambiar color fondo") {
+                document.body.style.backgroundColor = '#3498db';  // Cambia el color de fondo
+                document.getElementById("admin-console").innerHTML += "<p>Fondo cambiado a azul.</p>";
+            } else if (command === "mostrar mensaje") {
+                alert("Este es un mensaje desde la consola de admin!");
+                document.getElementById("admin-console").innerHTML += "<p>Mensaje mostrado.</p>";
+            } else {
+                document.getElementById("admin-console").innerHTML += `<p>Comando no reconocido: ${command}</p>`;
+            }
+            document.getElementById("admin-console").scrollTop = document.getElementById("admin-console").scrollHeight; // Desplaza hacia abajo para ver los nuevos comandos
+        }
+
+        // Detectar la entrada del admin para la consola
+        document.getElementById("command-input").addEventListener('keydown', function(e) {
+            if (e.key === 'Enter') {
+                const command = document.getElementById("command-input").value.trim();
+                if (command) {
+                    document.getElementById("admin-console").innerHTML += `<p><strong>Comando:</strong> ${command}</p>`;
+                    handleCommand(command);
+                    document.getElementById("command-input").value = '';  // Limpiar el campo de entrada
+                }
+            }
+        });
     </script>
 </body>
 </html>
