--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="discord-link">
             <p>Únete a nuestro Discord</p>
             <a href="https://discord.gg/9NTknVCncT" target="_blank">
-                <img src="https://cdn.discordapp.com/attachments/1212137120941211669/1331410760844181656/discord-logo-0.png?ex=67918465&is=679032e5&hm=b526b2ea105d54ae9e25910119151fcd070dcd423c91efdf4d7aecd5de0d4902&" alt="Discord">
+                <img src="https://cdn.discordapp.com/attachments/1212137120941211669/1331410760844181656/discord-logo-0.png" alt="Discord">
             </a>
         </div>
         <section id="roblox">
@@ -31,25 +31,8 @@
             <div class="game-link">
                 <p>Nuestro primer juego es <a href="https://www.roblox.com/es/games/108520288964581/Fields" target="_blank">Fields of the Universe</a></p>
                 <a href="https://www.roblox.com/es/games/108520288964581/Fields" target="_blank">
-                    <img src="https://cdn.discordapp.com/attachments/1238308863476891709/1331333249141575774/pixelcut-export_1.jpeg?ex=67913c35&is=678feab5&hm=dc665c72bfe7f447af1414b290b9ba9b06648f3f072bfa35cab37e4b297aa30f&" alt="Fields of the Universe">
+                    <img src="https://cdn.discordapp.com/attachments/1238308863476891709/1331333249141575774/pixelcut-export_1.jpeg" alt="Fields of the Universe">
                 </a>
-            </div>
-        </section>
-        <section id="features">
-            <h2>Características Destacadas</h2>
-            <div class="features">
-                <div class="feature">
-                    <h3>Juego Multijugador</h3>
-                    <p>Disfruta de emocionantes partidas multijugador con tus amigos.</p>
-                </div>
-                <div class="feature">
-                    <h3>Actualizaciones Frecuentes</h3>
-                    <p>Recibe nuevas actualizaciones y contenido regularmente.</p>
-                </div>
-                <div class="feature">
-                    <h3>Comunidad Activa</h3>
-                    <p>Únete a una comunidad activa y participa en eventos especiales.</p>
-                </div>
             </div>
         </section>
         <section id="minecraft">
