--- a/index.html
+++ b/index.html
@@ -126,7 +126,34 @@
             margin-top: 10px;
         }
     </style>
-    <script defer src="script.js"></script>
+    <script>
+        // JavaScript para las funcionalidades
+        function toggleAdminPanel() {
+            const adminPanel = document.getElementById('adminPanel');
+            if (adminPanel.style.display === 'block') {
+                adminPanel.style.display = 'none';
+            } else {
+                adminPanel.style.display = 'block';
+            }
+        }
+
+        function toggleDarkMode() {
+            const darkModeToggle = document.getElementById('darkModeToggle');
+            if (darkModeToggle.checked) {
+                document.body.style.backgroundColor = '#333';
+                document.body.style.color = '#fff';
+            } else {
+                document.body.style.backgroundColor = '#f4f4f4';
+                document.body.style.color = '#333';
+            }
+        }
+
+        function setActive(element) {
+            const links = document.querySelectorAll('nav a');
+            links.forEach(link => link.classList.remove('active'));
+            element.classList.add('active');
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -190,7 +217,5 @@
             <p>Contacto: <a href="mailto:centrickgamesstudios@gmail.com">centrickgamesstudios@gmail.com</a></p>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
